--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,4 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
+---
 version: 2
 jobs:
   build:
@@ -37,10 +34,10 @@ jobs:
           username: $QUAY_USERNAME
           password: $QUAY_PASSWORD
     steps:
-      run:
-        name: Deploying to Development Environment
-        command: |
-          kubectl get pods, deployments          
+      - run:
+          name: Deploying to Development Environment
+          command: |
+            kubectl get pods, deployments          
 workflows:
   version: 2
   build_and_deploy:
