--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
+      - setup_remote_docker: 
+         docker_layer_caching: true        
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "requirements.txt" }}
@@ -34,10 +36,13 @@ jobs:
           username: $QUAY_USERNAME
           password: $QUAY_PASSWORD
     steps:
+      - checkout
+      - setup_remote_docker: 
+         docker_layer_caching: true     
       - run:
           name: Deploying to Development Environment
           command: |
-            kubectl get pods, deployments          
+            kubectl get pods --all-namespaces          
 workflows:
   version: 2
   build_and_deploy:
