--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,8 @@ jobs:
           name: Build and Push Docker Image
           command: |
             docker login quay.io -u $QUAY_USERNAME -p $QUAY_PASSWORD
-            docker build -t quay.io/$IMAGE_NAME:$CIRCLE_BUILD_NUM .            
-            docker push quay.io/$IMAGE_NAME:$CIRCLE_BUILD_NUM
+            docker build -t quay.io/$IMAGE_NAME:$CIRCLE_SHA1 .            
+            docker push quay.io/$IMAGE_NAME:$CIRCLE_SHA1
   deploy_development:
     docker:
       - image: quay.io/marcelo_delnegro/ts-docker-deployment-dev
@@ -53,10 +53,10 @@ jobs:
 
             if [ ${DEPLOYS}  -eq 0 ]; then
                 echo "Installing release ${RELEASE_NAME}"
-                helm install --name=${RELEASE_NAME} $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --namespace=${RELEASE_NAMESPACE}
+                helm install --name=${RELEASE_NAME} $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
             else 
                 echo "Upgrading release ${RELEASE_NAME}"
-                helm upgrade $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --namespace=${RELEASE_NAMESPACE}
+                helm upgrade $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
             fi                    
 workflows:
   version: 2
