--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           - v1-dependencies-{{ checksum "requirements.txt" }}
           - v1-dependencies-
       - run:
-          name: install dependencies
+          name: Install dependencies
           command: |
             python3 -m venv venv
             . venv/bin/activate
@@ -57,7 +57,39 @@ jobs:
             else 
                 echo "Upgrading release ${RELEASE_NAME}"
                 helm upgrade $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
-            fi                    
+            fi    
+  deploy_qa:
+    docker:
+      - image: quay.io/marcelo_delnegro/ts-docker-deployment-dev
+        auth:
+          username: $QUAY_USERNAME
+          password: $QUAY_PASSWORD
+        environment:
+          S3_BUCKET: s6-kubernetes-charts
+          HELM_REPO_NAME: s6
+          HELM_CHART_NAME: ts-backend-chart
+          RELEASE_NAME: sample
+          RELEASE_NAMESPACE: qa
+    steps:
+      - checkout   
+      - run:
+          name: Deploying to Development Environment
+          command: |
+            helm init --client-only
+            helm plugin install https://github.com/hypnoglow/helm-s3.git
+            helm repo add s6 s3://${S3_BUCKET}
+            helm repo update
+
+            export DEPLOYS=$(helm ls | grep $RELEASE_NAME | wc -l)
+
+            if [ ${DEPLOYS}  -eq 0 ]; then
+                echo "Installing release ${RELEASE_NAME}"
+                helm install --name=${RELEASE_NAME} $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
+            else 
+                echo "Upgrading release ${RELEASE_NAME}"
+                helm upgrade $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
+            fi  
+
 workflows:
   version: 2
   build_and_deploy:
@@ -65,4 +97,9 @@ workflows:
       - build
       - deploy_development:
           requires:
+            - build        
+      - deploy_qa:
+          type: approval
+          requires:
             - build
+            - deploy_development
