--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,14 +49,14 @@ jobs:
             helm repo add s6 s3://${S3_BUCKET}
             helm repo update
 
-            export DEPLOYS=$(helm ls | grep $RELEASE_NAME | wc -l)
+            export DEPLOYS=$(helm ls --namespace $RELEASE_NAMESPACE | grep $RELEASE_NAME | wc -l)
 
             if [ ${DEPLOYS}  -eq 0 ]; then
                 echo "Installing release ${RELEASE_NAME}"
-                helm install --name=${RELEASE_NAME} $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
+                helm install --name $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace $RELEASE_NAMESPACE
             else 
                 echo "Upgrading release ${RELEASE_NAME}"
-                helm upgrade $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace=${RELEASE_NAMESPACE}
+                helm upgrade $RELEASE_NAME $HELM_REPO_NAME/$HELM_CHART_NAME -f values.yaml --set image.tag=$CIRCLE_SHA1 --namespace $RELEASE_NAMESPACE
             fi    
   deploy_qa:
     docker:
@@ -80,7 +80,7 @@ jobs:
             helm repo add s6 s3://${S3_BUCKET}
             helm repo update
 
-            export DEPLOYS=$(helm ls | grep $RELEASE_NAME | wc -l)
+            export DEPLOYS=$(helm ls --namespace $RELEASE_NAMESPACE | grep $RELEASE_NAME | wc -l)
 
             if [ ${DEPLOYS}  -eq 0 ]; then
                 echo "Installing release ${RELEASE_NAME}"
